--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "moment": "^2.30.1",
     "mongodb": "^6.14.0",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
